src/test/ui/unconstrained-none.stderr
error[E0282]: type annotations needed
  --> $DIR/unconstrained-none.rs:14:5
   |
14 |     None; //~ ERROR type annotations needed [E0282]
   |     ^^^^ cannot infer type for `T`

error: aborting due to previous error

